--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -71,18 +71,30 @@ $lw: 1370px;
 /* Global */
 html {
 	margin: 0 !important;
+	overflow-x: hidden;
 }
 body {
 	position: relative;
 	margin: 0;
   	padding: 0;
-  	overflow-x: hidden;
+  	
   	@include f-r;
   	font-size: 18px;
 	line-height: 1;
 	max-width: 1920px;
 	margin: auto;
-	padding-top: 45px;
+	padding-top: 110px;
+	overflow-x: hidden;
+
+	@media only screen and (max-width : $lw) {
+		padding-top: 103px;
+	}
+	@media only screen and (max-width : $tw) {
+		padding-top: 88px;
+	}
+	@media only screen and (max-width : $mw) {
+		padding-top: 45px;
+	}
 }
 
 input {
@@ -118,3 +130,5 @@ ul {
 @import 'index';
 @import 'inner';
 @import 'wp';
+@import 'woo-default';
+@import 'woo';
